# russian-doll-bench

./: .env.example  .gitignore  AGENTS.md  README.md  _kaggle_runner.py  analyze_logs.py  benchmark.ipynb  build_dataset.sh  build_kaggle_notebook.py  measure_terminals.py  pyproject.toml  run_benchmark.py  test_measure_terminals.py
benchmark/: envs.py  infrastructure.py  legacy_tasks.py  persistent_folder.py  task_generator.py  tasks.py  telemetry.py  test_adaptive_learning.py  test_envs.py  test_manual_tool_dispatch.py  test_persistent_folder.py  test_task_generator.py
benchmark/prompts/: exit.md  not-a-toolcall.md  system-advanced.md  system-prompt.md  system.md
logs_viewer/: __init__.py  app.py  index.html
reports/: hypotheses_report.md  leaderboard.csv  run_subcommands_by_model.csv  terminals-difficulty.csv  tool_usage_by_model.csv  tool_usage_report.md
reports/advanced/: README.md  hypotheses_report.md  run_subcommands_by_model.csv  tool_usage_by_model.csv  tool_usage_report.md
server/: AGENTS.md  app.py  base_terminal.py  index.html  sessions.py  terminal_spec.py
server/terminals/: AGENTS.md  TRACE_TESTS_RULES.md  __init__.py
server/terminals/bitmixer/: __init__.py  bitmixer_terminal.md  bitmixer_terminal.py  solution-trace.txt  trace_test.py  unit_tests.py
server/terminals/cipher/: __init__.py  cipher_terminal.md  cipher_terminal.py  solution-trace.txt  trace_test.py  unit_tests.py
server/testing/: __init__.py  trace_harness.py
server/tests/: test_app.py  test_benchmark_summary.py  test_logs_viewer_app.py  test_sessions.py  test_terminal_spec.py
(+27 files in other folders)
