[project]
name = "measuring-agi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle-benchmarks>=0.3.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "requests>=2.33.0",
    "python-dotenv>=1.2.2",
    "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
    "pyproject-parser>=0.14.0",
    "pytest>=9.0.2",
    "stickytape==0.2.1",
]

[tool.pytest.ini_options]
testpaths = ["server/tests", "server/terminals"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
norecursedirs = ["temp", ".uv-cache", ".venv"]
